# macrodb

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
include/: macrodb.h  macrodbmapper.h  macrodbsafety.h  macrodbtypes.h
include/platform/: pal.h
include/table/: table.h  tablehandler.h
src/: macrodb.c  macrodbmapper.c  macrodbsafety.c  pal_file_ops.c
tests/: CMakeLists.txt  pal.c  test.c
